--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,56 +15,78 @@
         <header>
             <ul id="navigation">
                 <li><a href="about.html" target="_blank">About</a></li>
-                <li><a href="contact.html" target="_blank">Contacts</a></li>
+                <li><a href="https://www.linkedin.com/in/ranveeriitkgp/" target="_blank">Contacts</a></li>
             </ul>
         </header>
     </nav>
     <con>
         <h1 id="heading">CP Question Finder</h1>
-        <form>
-            <input type="text" name="question" id="input1" placeholder="Enter your text here...">
-            <!-- <br> -->
-            <input type="submit" value="Search" id="btn" />
-            <!-- <button onclick="func1()" type="button" id="btn" name="button">Search</button> -->
-        </form>
-        <div class="loading"></div>
-        <qtn>
-        <div class="question">
-            <div class="title"></div>
-            <div class="url">
-                <a href=""></a>
+        <div class="fixwidth">
+
+
+            <div class="aflex">
+                <form>
+
+                    <input type="text" name="question" id="input1" placeholder="Enter your text here...">
+                    <!-- <br> -->
+                    <input type="submit" value="Search" id="btn" />
+
+                    <!-- <button onclick="func1()" type="button" id="btn" name="button">Search</button> -->
+                </form>
             </div>
-            <div class="body"></div>
+            <div class="loading"></div>
+            <qtn>
+                <div class="question">
+                    <div class="title"></div>
+                    <div class="url">
+                        <a href=""></a>
+                    </div>
+                    <div class="link">
+
+                    </div>
+                    <div class="body"></div>
+                </div>
+                <div class="question">
+                    <div class="title"></div>
+                    <div class="url">
+                        <a href=""></a>
+                    </div>
+                    <div class="link">
+
+                    </div>
+                    <div class="body"></div>
+                </div>
+                <div class="question">
+                    <div class="title"></div>
+                    <div class="url">
+                        <a href=""></a>
+                    </div>
+                    <div class="link">
+
+                    </div>
+                    <div class="body"></div>
+                </div>
+                <div class="question">
+                    <div class="title"></div>
+                    <div class="url">
+                        <a href=""></a>
+                    </div>
+                    <div class="link">
+
+                    </div>
+                    <div class="body"></div>
+                </div>
+                <div class="question">
+                    <div class="title"></div>
+                    <div class="url">
+                        <a href=""></a>
+                    </div>
+                    <div class="link"></div>
+                    <!-- <a class="link"  href="">click here</a> -->
+                    <div class="body"></div>
+                </div>
+            </qtn>
         </div>
-        <div class="question">
-            <div class="title"></div>
-            <div class="url">
-                <a href=""></a>
-            </div>
-            <div class="body"></div>
-        </div>
-        <div class="question">
-            <div class="title"></div>
-            <div class="url">
-                <a href=""></a>
-            </div>
-            <div class="body"></div>
-        </div>
-        <div class="question">
-            <div class="title"></div>
-            <div class="url">
-                <a href=""></a>
-            </div>
-            <div class="body"></div>
-        </div>
-        <div class="question">
-            <div class="title"></div>
-            <div class="url">
-                <a href=""></a>
-            </div>
-            <div class="body"></div>
-        </div>
-        </qtn>
     </con>
     <footer>Copyright &copy; 2022-2023 <br> Ranveer Raj<br> All rights reserved</footer>
 
@@ -76,21 +98,22 @@
     const form = document.querySelector("form");
     const qelment = form.question;
 
-    const questions=document.querySelectorAll(".question");
-    const title=document.querySelectorAll(".title");
-    const url=document.querySelectorAll(".url");
-    const body=document.querySelectorAll(".body");
-    const loadingdiv=document.querySelectorAll(".loading");
+    const questions = document.querySelectorAll(".question");
+    const title = document.querySelectorAll(".title");
+    const url = document.querySelectorAll(".url");
+    const link = document.querySelectorAll(".link");
+    const body = document.querySelectorAll(".body");
+    const loadingdiv = document.querySelectorAll(".loading");
     form.addEventListener('submit', async (e) => {
         e.preventDefault();
         const quest = qelment.value;
-        loadingdiv.innerHTML=`<h3>Loading......</h3>`;
-        for(i=0;i<5;i++)
-            {
-                title[i].innerHTML= ``;
-                url[i].innerHTML= ``;
-                body[i].innerHTML= ``;
-            }
+        loadingdiv.innerHTML = `<h3>Loading......</h3>`;
+        for (i = 0; i < 5; i++) {
+            title[i].innerHTML = ``;
+            url[i].innerHTML = ``;
+            body[i].innerHTML = ``;
+            link[i].innerHTML = ``;
+        }
         //fetch
 
         try {
@@ -98,12 +121,20 @@
                 method: "GET"
             });
             const data = await res.json();
-            loadingdiv.innerHTML=``;
-            for(i=0;i<5;i++)
-            {
-                title[i].innerHTML= `<h3>${data[i].title}</h3>`;
-                url[i].innerHTML= `<h3>${data[i].url}</h3>`;
-                body[i].innerHTML= `${data[i].body}`;
+            var cnt=1;
+            loadingdiv.innerHTML = ``;
+            for (i = 0; i < 5; i++) {
+                if(data[i].url === ``){
+
+                }
+                else{
+                    title[i].innerHTML = `<a target="_blank" href="${data[i].url}" > Problem ${cnt} : ${data[i].title}</a>`;
+                    cnt++;
+                }
+                
+                // url[i].innerHTML= `<h3>${data[i].url}</h3>`;
+                // link[i].innerHTML= `<a target="_blank" href="${data[i].url}" > click here baby</a>`;
+                // body[i].innerHTML= `${data[i].body}`;
             }
         } catch (error) {
             alert(error);
